CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/Oferta__c.object-meta.xml
<CustomObject>
    <description>Objeto creado para contener las ofertas insertadas por Analytics.</description>
    <label>Oferta</label>
    <nameField>
        <label>Oferta Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ofertas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>