CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ofertas</relationshipLabel>
    <relationshipName>Ofertas</relationshipName>
    <type>Lookup</type>
</CustomField>