CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/comentario_oferta_sales__c.field-meta.xml
<CustomField>
    <fullName>comentario_oferta_sales__c</fullName>
    <label>Comentario Oferta</label>
    <type>TextArea</type>
</CustomField>