CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/Descripcion_oferta_sales__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_oferta_sales__c</fullName>
    <description>Campo de texto enriquecido para descripción de la oferta</description>
    <label>Descripcion oferta</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>