CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/Detalle_sales__c.field-meta.xml
<CustomField>
    <fullName>Detalle_sales__c</fullName>
    <label>Detalle</label>
    <type>TextArea</type>
</CustomField>