CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/Ejecutivo_sales__c.field-meta.xml
<CustomField>
    <fullName>Ejecutivo_sales__c</fullName>
    <label>Ejecutivo Contacto</label>
    <length>10</length>
    <type>Text</type>
</CustomField>