CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/Estado_Oferta_sales__c.field-meta.xml
<CustomField>
    <fullName>Estado_Oferta_sales__c</fullName>
    <label>Estado Oferta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gestionado</fullName>
            </value>
            <value>
                <fullName>No Gestionado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>