CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/Familia_Producto_sales__c.field-meta.xml
<CustomField>
    <fullName>Familia_Producto_sales__c</fullName>
    <label>Familia Producto</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTO</fullName>
            </value>
            <value>
                <fullName>HOGAR</fullName>
            </value>
            <value>
                <fullName>RRVV</fullName>
            </value>
            <value>
                <fullName>VIDA</fullName>
            </value>
            <value>
                <fullName>CUENTA VISTA</fullName>
            </value>
            <value>
                <fullName>PLAN PLUS</fullName>
            </value>
            <value>
                <fullName>CREDITO DE CONSUMO</fullName>
            </value>
            <value>
                <fullName>INVERSIONES</fullName>
            </value>
            <value>
                <fullName>CREDITO HIPOTECARIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>