CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/Interes_Oferta_sales__c.field-meta.xml
<CustomField>
    <fullName>Interes_Oferta_sales__c</fullName>
    <label>Interés Oferta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interesado</fullName>
            </value>
            <value>
                <fullName>No Interesado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>