CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/Motivo_no_interes_sales__c.field-meta.xml
<CustomField>
    <fullName>Motivo_no_interes_sales__c</fullName>
    <label>Motivo no Interés</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cesante</fullName>
            </value>
            <value>
                <fullName>Mejor Oferta Competencia</fullName>
            </value>
            <value>
                <fullName>No quiere endeudarse</fullName>
            </value>
            <value>
                <fullName>Oferta poco atractiva</fullName>
            </value>
            <value>
                <fullName>Descontento con Consorcio</fullName>
            </value>
            <value>
                <fullName>Situación COVID</fullName>
            </value>
            <value>
                <fullName>Cómodo con su banco</fullName>
            </value>
            <value>
                <fullName>Sin interés en Refinanciar</fullName>
            </value>
            <value>
                <fullName>Características de producto</fullName>
                <isActive>false</isActive>
                <label>Características de producto</label>
            </value>
            <value>
                <fullName>Mala experiencia con CNS</fullName>
                <isActive>false</isActive>
                <label>Mala experiencia con CNS</label>
            </value>
            <value>
                <fullName>Mejor oferta otra compañía</fullName>
                <isActive>false</isActive>
                <label>Mejor oferta otra compañía</label>
            </value>
            <value>
                <fullName>No tiene capacidad económica</fullName>
                <isActive>false</isActive>
                <label>No tiene capacidad económica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>