CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Ofertas</relationshipLabel>
    <relationshipName>Ofertas</relationshipName>
    <type>Lookup</type>
</CustomField>