CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/Origen_sales__c.field-meta.xml
<CustomField>
    <fullName>Origen_sales__c</fullName>
    <label>Origen</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>