CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/Owner_Opp_sales__c.field-meta.xml
<CustomField>
    <fullName>Owner_Opp_sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Propietario de la oportunidad a generar, según Ejecutivo informado por Analytics</description>
    <label>Responsable Oportunidad</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ofertas</relationshipName>
    <type>Lookup</type>
</CustomField>