CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/Producto_sales__c.field-meta.xml
<CustomField>
    <fullName>Producto_sales__c</fullName>
    <label>Producto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>