CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/Rut_Cliente_sales__c.field-meta.xml
<CustomField>
    <fullName>Rut_Cliente_sales__c</fullName>
    <label>Rut Cliente</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>