CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/telefono_ivr_sales__c.field-meta.xml
<CustomField>
    <fullName>telefono_ivr_sales__c</fullName>
    <description>Campo creado por everis para contener el número de teléfono de la Oferta que luego se traspasará a la Oportunidad.</description>
    <label>Télefono IVR</label>
    <type>Phone</type>
</CustomField>