CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/Vigencia_Oferta_sales__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_Oferta_sales__c</fullName>
    <label>Vigencia Oferta</label>
    <required>true</required>
    <type>Date</type>
</CustomField>