CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/fields/Vigente_sales__c.field-meta.xml
<CustomField>
    <fullName>Vigente_sales__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Vigente</label>
    <type>Checkbox</type>
</CustomField>