CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/recordTypes/sales_oferta.recordType-meta.xml
<RecordType>
    <fullName>sales_oferta</fullName>
    <active>true</active>
    <label>Sales Oferta</label>
</RecordType>