CNSDEVCOLECT/force-app/main/default/objects/Oferta__c/recordTypes/sales_oferta_lectura.recordType-meta.xml
<RecordType>
    <fullName>sales_oferta_lectura</fullName>
    <active>true</active>
    <label>Sales Oferta Lectura</label>
</RecordType>